<?xml version="1.0"?>
<package format="3">
  <name>my_turtle_pkg</name>
  <version>0.0.0</version>
  <description>Draw boundaries assignment</description>

  <maintainer email="racim@example.com">racim</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>